syntax = "proto3"; 
package s3x;
import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/protobuf/timestamp.proto";

// Ledger is our internal state keeper, and is responsible
// for keeping track of buckets, objects, and their corresponding IPFS hashes
message Ledger {
    // key = bucket name
    map<string, LedgerBucketEntry> buckets = 1 [(gogoproto.nullable) = false];
}

// LedgerBucketEntry is an individual entry within the ledger containing information about a bucket
message LedgerBucketEntry {
    // key = object name
    map<string, LedgerObjectEntry> objects = 1 [(gogoproto.nullable) = false];
    string name = 2;
    string ipfsHash = 3;
}

// LedgerObjectEntry is an individual entry within an bucket, containing information about an object
message LedgerObjectEntry {
    string ipfsHash = 1;
    string name = 2;
}

// BucketInfo is used to store s3 bucket metadata
message BucketInfo {
    // name is the name of the bucket
    string name = 1;
    google.protobuf.Timestamp created = 2 [(gogoproto.stdtime) = true, (gogoproto.nullable) = false];
    // the location of the bucket
    string location = 3;
}


// Bucket is a data repositroy for S3 objects
message Bucket {
    // data associated with the object
    bytes data = 1;
    // information associated with this bucket
    BucketInfo bucketInfo = 2 [(gogoproto.nullable) = false];
    // maps object names to object hashes
    map<string, string> objects = 3 [(gogoproto.nullable) = false];
}

// Object is a singular s3 object.
// the data field contains the actual data 
// referred to by this object, while the objectInfo
// field is used to contain the information associated
// wth the object
message Object {
    bytes data = 1;
    ObjectInfo objectInfo = 2 [(gogoproto.nullable) = false];
}

// ObjectInfo contains ifnormation about the object
message ObjectInfo {
    string bucket = 1;
    string name = 2;
    string modTime = 3;
    int64 size = 4;
    bool isDir = 5;
    string etag = 6;
    string contentType = 7;
    string contentEncoding = 8;
    string expires = 9;
    string storageClass = 10;
    repeated ObjectPartInfo parts = 11 [(gogoproto.nullable) = false];
    map<string, string> userDefined = 12;
    bool metadataOnly = 13;
    string accTime = 14;
    string backendType = 15;
    string contentDisposition = 16;
    string contentLanguage = 17;
}


// ObjectPartInfo contains information an individual object client
message ObjectPartInfo {
    // this should be an "int" type in Golang
    int64 number = 1;
    string name = 2;
    string etag = 3;
    int64 size = 4;
    int64 actualSize = 5;
}